adjustments to layout/colours

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         }
 
         h1, h2, h3 {
-            color: #dd9933;
+            color: #ef4b24;
         }
 
         a {
-            color: #dd9933;
+            color: #ef4b24;
             text-decoration: none;
         }
 
@@ -34,7 +34,7 @@
         }
 
         .navbar {
-            background-color: #2a272b;
+            background-color: #000;
             color: #fff;
             padding: 10px 0;
             position: fixed;
@@ -71,7 +71,7 @@
         }
 
         #hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/Workshop Front .jpg') no-repeat center center; 
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/Workshop Front .jpg') no-repeat; 
             background-size: cover;
             color: #fff;
             text-align: center;
@@ -97,7 +97,7 @@
             display: inline-block;
             padding: 12px 30px;
             font-size: 18px;
-            background-color: #dd9933; 
+            background-color: #ef4b24; 
             color: #fff;
             border-radius: 5px;
             transition: background-color 0.3s ease;
@@ -110,7 +110,7 @@
         #about {
             padding: 50px 0;
             text-align: center;
-            background-color: #666666;
+            background-color: #333;
             color: white;
         }
 
@@ -164,7 +164,7 @@
 
         #contact {
             padding: 50px 0;
-            background-color: #666;
+            background-color: #333;
             color: #fff;
             text-align: center;
         }
@@ -267,7 +267,7 @@
             <h1>Titan Mechanical: Quality 4x4 Auto Repair</h1>
             <p>Specialist 4x4 & Diesel Mechanics in Ferntree Gully</p>
             <!-- 'Book Now' leads to contact section -->
-            <a href="#contact" class="btn">Book Now</a>
+            <a href="#contact" class="btn">Speak To Our Team!</a>
         </div>
     </section>
 
