--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
         }
 
         .service img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 20px;
+            width: 100%;
+            height: 200px; /* or any fixed height that suits your design */
+            object-fit: cover;
+            object-position: center;
         }
 
         .service h3 {
@@ -160,6 +161,29 @@
             line-height: 1.5;
             margin-top: 10px;
             border-top: 1px solid #eee;
+        }
+        
+        .service-content ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .service-content ul li {
+            position: relative;
+            padding-left: 20px;
+            margin-bottom: 8px;
+            line-height: 1.4;
+        }
+
+        .service-content ul li::before {
+            content: "•"; /* or a custom icon */
+            color: #ef4b24; /* brand color for the bullet */
+            position: absolute;
+            left: 0;
+            top: 0;
+            font-size: 1.2em;
+            line-height: 1;
         }
 
         #contact {
@@ -327,7 +351,7 @@
                     </div>
                 </div>
                 <div class="service">
-                    <img src="/D22 Dyno .jpg" alt="Diesel Engine Specialist">
+                    <img src="/Manifold Clean .jpg" alt="Diesel Engine Specialist">
                     <h3 class="service-heading">Diesel Engine Specialist</h3>
                     <div class="service-content">
                         <p>Comprehensive diesel solutions:</p>
@@ -337,6 +361,19 @@
                             <li>EGR intake cleaning</li>
                             <li>DPF cleaning and regeneration</li>
                             <li>Clutch and tune packages for specific vehicles</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="service">
+                    <img src="/D22 Dyno .jpg" alt="Diagnostics">
+                    <h3 class="service-heading">Diagnostics</h3>
+                    <div class="service-content">
+                        <p>Identify issues fast and improve reliability:</p>
+                        <ul>
+                            <li>Dyno testing to assess performance under load</li>
+                            <li>Snap-On diagnostic tools for precise fault detection</li>
+                            <li>Comprehensive data analysis for informed decision-making</li>
+                            <li>Clear reporting and recommendations to keep you moving</li>
                         </ul>
                     </div>
                 </div>
