Image update, new brands

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             color: #fff;
             text-align: center;
             padding: 150px 0;
+            background-position: 50% 50%;
         }
 
         #hero .container {
@@ -527,6 +528,20 @@
                     <h3>Dobinsons Suspension</h3>
                 </a>
                 <p>Suspension upgrades enhancing ride comfort and load capability.</p>
+            </div>
+            <div class="brand-item">
+                <a href="https://bossairsuspension.com.au" target="_blank" rel="noopener">
+                    <img src="/boss-air-suspension.png" alt="Boss Air Suspension">
+                    <h3>Boss Air Suspension</h3>
+                </a>
+                <p>Air suspension solutions designed for heavy loads and off-road reliability.</p>
+            </div>
+            <div class="brand-item">
+                <a href="https://caloffroad.com.au" target="_blank" rel="noopener">
+                    <img src="/caloffroad.png" alt="CalOffroad">
+                    <h3>CalOffroad</h3>
+                </a>
+                <p>Performance suspension kits featuring Bilstein and Fox upgrades for enhanced off-road handling.</p>
             </div>
             <div class="brand-item">
                 <a href="https://www.cornells.com.au/" target="_blank" rel="noopener">
